tests/typerel/tconsttypemismatch.nim
discard """
  file: "tconsttypemismatch.nim"
  line: 7
  errormsg: "type mismatch"
"""

const foo : int = 1000 / 30
